README: Corrects typo/wording

--- a/README
+++ b/README
@@ -25,4 +25,4 @@ from the following plugins:
   - Login Failed Log
   - Redirect Failed Logins
   - Ban IP Address/Range
-A big thanks you to the authors of these plugins!
+My thanks go out to the authors of these plugins!
