--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
 0.9.8 (2013-01-23)
   - corrects small problems with logging which prevented previous versions
     to be installable on Joomla! 3.0. This should now be possible. In case you
-	look at the log and wonder about some deprecation warnings - it seems that
-	some functions were deprecated without providing replacement yet...
+    look at the log and wonder about some deprecation warnings - it seems that
+    some functions were deprecated without providing replacement yet...
 
 0.9.7 (2013-01-15)
   - corrects the plugin name (meaning you have to uninstall previous versions
@@ -11,7 +11,8 @@
     special to do)
   - corrects problems with not loaded language files during install,
     causing a text like PLG_BFSTOP_DESC instead of a meaningful description
-  - adds an option to en- or disable logging, disables it by default
+  - adds an option to en- or disable logging (some internal messages about what
+    the plugin is doing, written to a file), disables it by default
 
 0.9.6 (2013-01-06)
   - removes password from failed login entries in the database to prevent
@@ -20,4 +21,3 @@
 0.9.5 (2012-12-06)
   - Version initially released to the public
   - fixes uninstall script previusly causing an error
-
