Adds configurable unblock time

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -29,3 +29,16 @@ NOTIFY_UNLIMITED="unbegrenzt"
 NOTIFY_NEVER="niemals"
 BLOCKEDMESSAGELABEL="Sperrnachricht"
 BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde."
+BLOCKDURATIONLABEL="Sperr-Dauer"
+BLOCKDURATIONDESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
+BLOCK_UNLIMITED="unbegrenzt"
+BLOCK_5MINUTES="5 Minuten"
+BLOCK_10MINUTES="10 Minuten"
+BLOCK_15MINUTES="15 Minuten"
+BLOCK_30MINUTES="30 Minuten"
+BLOCK_60MINUTES="60 Minuten"
+BLOCK_1HOUR="1 Stunde"
+BLOCK_2HOURS="2 Stunden"
+BLOCK_4HOURS="4 Stunden"
+BLOCK_8HOURS="8 Stunden"
+BLOCK_24HOURS="1 Tag"
