--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -29,3 +29,16 @@ NOTIFY_UNLIMITED="unlimited"
 NOTIFY_NEVER="never"
 BLOCKEDMESSAGELABEL="Blocked message"
 BLOCKEDMESSAGEDESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts"
+BLOCKDURATIONLABEL="Block Duration"
+BLOCKDURATIONDESC="Determines how long an IP address is blocked before it is allowed to access the site again"
+BLOCK_UNLIMITED="unlimited"
+BLOCK_5MINUTES="5 Minutes"
+BLOCK_10MINUTES="10 Minutes"
+BLOCK_15MINUTES="15 Minutes"
+BLOCK_30MINUTES="30 Minutes"
+BLOCK_60MINUTES="60 Minutes"
+BLOCK_1HOUR="1 Hour"
+BLOCK_2HOURS="2 Hours"
+BLOCK_4HOURS="4 Hours"
+BLOCK_8HOURS="8 Hours"
+BLOCK_24HOURS="1 Day"
