--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -1,7 +1,7 @@
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dieses Plugin dient der Abwehr von Brute-Force-Attacken auf Ihre Joomla-Installation. Zu diesem Zweck wird ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend erstellt, und bei Erreichen einer konfigurierbaren Anzahl solcher fehlgeschlagener Versuche wird die IP-Adresse, von der diese Versuche kommen, gesperrt. Weiters lassen sich Benachrichtigungen über fehlgeschlagene Login-Versuche sowie über geblockte IP-Adressen konfigurieren. Weiters kann man vor der Antwort auf fehlgeschlagene Login-Versuche eine einstellbare Verzögerung konfigurieren.</div><br /><div><em>Nicht vergessen, das Plugin nach der Installation zu konfigurieren und freizugeben!</em><br />Bei Fragen zum Plugin besuchen Sie bitte die <a href='https://github.com/codeling/bfstop'>Projektseite auf github</a>. Sollten bei der Verwendung Probleme auftreten, zögern Sie nicht, diese im <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a> zu melden!</div><br /><div>Teilweise wurde die Funktionalität durch die folgenden Plugins inspiriert: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Mein Dank geht an die Autoren dieser Plugins!<br /><em>Brute Force Stop</em> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
 ENABLEBLOCKLABEL="Blockierung"
-ENABLEBLOCKDESC="Bestimmt ob IP-Adressen nach der angegebenen Anzahl von Login-Versuchen blockiert werden sollen"
+ENABLEBLOCKDESC="Bestimmt ob das Plugin IP-Adressen blockieren soll. Wenn deaktiviert, werden keine neuen Sperren mehr angelegt, und auch bereits eingetragene Sperren ignoriert (obgleich diese erhalten bleiben)."
 EMAILSOURCELABEL="Email-Adress-Quelle"
 EMAILSOURCEDESC="Bitte wählen Sie wie die Ziel-Email-Adresse ermittelt werden soll"
 SELECTEDUSERS="Gewählter Benutzer"
@@ -19,17 +19,16 @@ DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-V
 ENABLELOGGINGLABEL="Logging"
 ENABLELOGGINGDESC="Ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php)"
 BLOCKNUMBERLABEL="Sperrschwelle"
-BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus (im konfigurierbaren Intervall) versucht werden kann bevor diese IP-Adresse gesperrt wird."
+BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus versucht werden kann bevor diese IP-Adresse gesperrt wird."
 BLOCKINTERVALLABEL="Sperrintervall"
-BLOCKINTERVALDESC="Intervall (in Stunden) für die fehlgeschlagene Login-Versuche von einer IP-Adresse aus berücksichtigt werden für die Sperre (Hinweis: die Sperre ist im Moment permanent)"
-COM_PLUGINS_NOTIFY_FIELDSET_LABEL="Benachrichtigungen"
+BLOCKINTERVALDESC="Intervall (in Stunden) für das fehlgeschlagene Login-Versuche von einer IP-Adresse aus berücksichtigt werden für die Sperre (Hinweis: wird nur berücksichtigt falls kleiner als die Sperrdauer; ansonsten könnte nach dem Aufheben einer IP-Sperre beim fehlgeschlagenen nächsten Login-Versuch sofort wieder eine Sperre ausgelöst werden aufgrund der weiter zurückliegenden fehlgeschlagenen Versuche). Dieses Setting sollte nur benötigt werden wenn eine unbegrenzte Sperrdauer gewählt wurde; in diesem Fall ist es eine schlechte Idee, auch alle fehlgeschlagenen Logins (also beliebig weit zurück) für die Sperre heranzuziehen, dies würde potentiell auch viele ganz normale Benutzer aussperren, daher ist der Maximal-Wert hier 1 Tag."
 ENABLED="aktiviert"
 DISABLED="deaktiviert"
 NOTIFY_UNLIMITED="unbegrenzt"
 NOTIFY_NEVER="niemals"
 BLOCKEDMESSAGELABEL="Sperrnachricht"
-BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde."
-BLOCKDURATIONLABEL="Sperr-Dauer"
+BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde (wenn leergelassen, wird eine Standard-Nachricht angezeigt: 'Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt.')."
+BLOCKDURATIONLABEL="Sperrdauer"
 BLOCKDURATIONDESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
 BLOCK_UNLIMITED="unbegrenzt"
 BLOCK_5MINUTES="5 Minuten"
