Adds optional message about remaining attempts

--- a/language/de-DE/de-DE.plg_system_bfstop.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.ini
@@ -7,3 +7,4 @@ ORIGIN="Quelle"
 BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt! Die Login-Versuche:\n\n%s"
 BLOCKED_IP_ADDRESS_SUBJECT="IP-Adresse %s gesperrt"
 BLOCKED_IP_MESSAGE="Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt."
+X_ATTEMPTS_LEFT="Du hast noch %d Versuch(e) bevor deine IP-Adresse blockiert wird!"
