--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -28,6 +28,8 @@ BLOCKEDMESSAGELABEL="Blocked message"
 BLOCKEDMESSAGEDESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts. If left empty, this default message will be shown: 'Your IP address has been blocked because there were too many unsuccessful login attempts in a short time.'"
 BLOCKDURATIONLABEL="Block Duration"
 BLOCKDURATIONDESC="Determines how long an IP address is blocked before it is allowed to access the site again"
+ENABLENOTIFYREMAININGATTEMPTSLABEL="Remaining attempts"
+ENABLENOTIFYREMAININGATTEMPTSDESC="Enables or disables notifications about remaining attempts; if enabled, the user will, after each failed login attempt, see a message in the login form about how many login attempts still are available before the IP address will be blocked."
 BLOCK_UNLIMITED="unlimited"
 BLOCK_5MINUTES="5 Minutes"
 BLOCK_10MINUTES="10 Minutes"
