--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -28,6 +28,8 @@ BLOCKEDMESSAGELABEL="Sperrnachricht"
 BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde (wenn leergelassen, wird eine Standard-Nachricht angezeigt: 'Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt.')."
 BLOCKDURATIONLABEL="Sperrdauer"
 BLOCKDURATIONDESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
+ENABLENOTIFYREMAININGATTEMPTSLABEL="Übrige Versuche"
+ENABLENOTIFYREMAININGATTEMPTSDESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt"
 BLOCK_UNLIMITED="unbegrenzt"
 BLOCK_5MINUTES="5 Minuten"
 BLOCK_10MINUTES="10 Minuten"
