--- a/language/en-GB/en-GB.plg_system_bfstop.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.ini
@@ -7,3 +7,4 @@ ORIGIN="Origin"
 BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %s because there were too many unsuccessful login attempts in a short time. These are the attempts:\n\n%s"
 BLOCKED_IP_ADDRESS_SUBJECT="Blocked IP Address %s"
 BLOCKED_IP_MESSAGE="Your IP address has been blocked because there were too many unsuccessful login attempts in a short time."
+X_ATTEMPTS_LEFT="You have %d attempt(s) left before your IP address will be blocked"
