--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -10,9 +10,9 @@ SELECTUSERLABEL="Select a User"
 SELECTUSERSDESC="Select the user you would like to have notifications to be sent."
 ENTEREMAILLABEL="Email Address"
 ENTEREMAILDESC="Enter the Email Address where you would like to have notifications to be sent."
-NOTIFYFAILEDNUMBERLABEL="Max. # of failed msgs per day"
+NOTIFYFAILEDNUMBERLABEL="Failed msgs per day"
 NOTIFYFAILEDNUMBERDESC="How often to notify about a failed login during one day"
-NOTIFYBLOCKEDNUMBERLABEL="Max. # of blocked msgs per day"
+NOTIFYBLOCKEDNUMBERLABEL="Blocked msgs per day"
 NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP during one day"
 DELAYDURATIONLABEL="Delay"
 DELAYDURATIONDESC="Delay (in seconds) on a failed login attempt"
