Disable remaining notify when blocking is disabled, fixes too long german lang string

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -10,9 +10,9 @@ SELECTUSERLABEL="Benutzer wählen"
 SELECTUSERDESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
 ENTEREMAILLABEL="Email-Adresse"
 ENTEREMAILDESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
-NOTIFYFAILEDNUMBERLABEL="Max. Fehlgeschlagen-Nachrichten"
+NOTIFYFAILEDNUMBERLABEL="Fehlgeschlagen-Nachrichten"
 NOTIFYFAILEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
-NOTIFYBLOCKEDNUMBERLABEL="Max. Blockiert-Nachrichten"
+NOTIFYBLOCKEDNUMBERLABEL="Blockiert-Nachrichten"
 NOTIFYBLOCKEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
 DELAYDURATIONLABEL="Verzögerung"
 DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
