--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -1,35 +1,37 @@
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dieses Plugin dient der Abwehr von Brute-Force-Attacken auf Ihre Joomla-Installation. Zu diesem Zweck wird ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend erstellt, und bei Erreichen einer konfigurierbaren Anzahl solcher fehlgeschlagener Versuche wird die IP-Adresse, von der diese Versuche kommen, gesperrt. Weiters lassen sich Benachrichtigungen über fehlgeschlagene Login-Versuche sowie über geblockte IP-Adressen konfigurieren. Weiters kann man vor der Antwort auf fehlgeschlagene Login-Versuche eine einstellbare Verzögerung konfigurieren.</div><br /><div><em>Nicht vergessen, das Plugin nach der Installation zu konfigurieren und freizugeben!</em><br />Bei Fragen zum Plugin besuchen Sie bitte die <a href='https://github.com/codeling/bfstop'>Projektseite auf github</a>. Sollten bei der Verwendung Probleme auftreten, zögern Sie nicht, diese im <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a> zu melden!</div><br /><div>Teilweise wurde die Funktionalität durch die folgenden Plugins inspiriert: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Mein Dank geht an die Autoren dieser Plugins!<br /><em>Brute Force Stop</em> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-ENABLEBLOCKLABEL="Blockierung"
-ENABLEBLOCKDESC="Bestimmt ob das Plugin IP-Adressen blockieren soll. Wenn deaktiviert, werden keine neuen Sperren mehr angelegt, und auch bereits eingetragene Sperren ignoriert (obgleich diese erhalten bleiben)."
-EMAILSOURCELABEL="Email-Adress-Quelle"
-EMAILSOURCEDESC="Bitte wählen Sie wie die Ziel-Email-Adresse ermittelt werden soll"
+BLOCK_ENABLED_LABEL="Blockierung"
+BLOCK_ENABLED_DESC="Bestimmt ob das Plugin IP-Adressen blockieren soll. Wenn deaktiviert, werden keine neuen Sperren mehr angelegt, und auch bereits eingetragene Sperren ignoriert (obgleich diese erhalten bleiben)."
+EMAIL_SOURCE_LABEL="Email-Adress-Quelle"
+EMAIL_SOURCE_DESC="Bitte wählen Sie wie die Ziel-Email-Adresse ermittelt werden soll"
+USERID_LABEL="Benutzer wählen"
+USERID_DESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
+EMAIL_ADDRESS_LABEL="Email-Adresse"
+EMAIL_ADDRESS_DESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
+NOTIFY_FAILED_NUMBER_LABEL="Fehlgeschlagen-Nachrichten"
+NOTIFY_FAILED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
+NOTIFY_BLOCKED_NUMBER_LABEL="Blockiert-Nachrichten"
+NOTIFY_BLOCKED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
+DELAY_DURATION_LABEL="Verzögerung"
+DELAY_DURATION_DESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
+LOGGING_ENABLED_LABEL="Logging"
+LOGGING_ENABLED_DESC="Ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php)"
+BLOCK_NUMBER_LABEL="Sperrschwelle"
+BLOCK_NUMBER_DESC="Wie oft ein Login von derselben IP-Adresse aus versucht werden kann bevor diese IP-Adresse gesperrt wird."
+BLOCKED_MESSAGE_LABEL="Sperrnachricht"
+BLOCKED_MESSAGE_DESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde (wenn leergelassen, wird eine Standard-Nachricht angezeigt: 'Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt.')."
+BLOCK_DURATION_LABEL="Sperrdauer"
+BLOCK_DURATION_DESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
+NOTIFY_REMAINING_ATTEMPTS_LABEL="Übrige Versuche"
+NOTIFY_REMAINING_ATTEMPTS_DESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt"
+NOTIFY_BLOCKED_USER_LABEL="Benutzer-Block-Nachricht"
+NOTIFY_BLOCKED_USER_DESC="Wenn eingeschaltet, wird an die in der Datenbank hinterlegte Email-Adresse eine Nachricht hinterlegt, wenn eine IP-Adresse gesperrt wird (sofern der Benutzername, mit dem das Login versucht wurde, ein existierender war)"
 SELECTEDUSERS="Gewählter Benutzer"
 CUSTOMEMAILADDRESS="Benutzerdefinierte Email-Adresse"
-SELECTUSERLABEL="Benutzer wählen"
-SELECTUSERDESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
-ENTEREMAILLABEL="Email-Adresse"
-ENTEREMAILDESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
-NOTIFYFAILEDNUMBERLABEL="Fehlgeschlagen-Nachrichten"
-NOTIFYFAILEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
-NOTIFYBLOCKEDNUMBERLABEL="Blockiert-Nachrichten"
-NOTIFYBLOCKEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
-DELAYDURATIONLABEL="Verzögerung"
-DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
-ENABLELOGGINGLABEL="Logging"
-ENABLELOGGINGDESC="Ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php)"
-BLOCKNUMBERLABEL="Sperrschwelle"
-BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus versucht werden kann bevor diese IP-Adresse gesperrt wird."
 ENABLED="aktiviert"
 DISABLED="deaktiviert"
 NOTIFY_UNLIMITED="unbegrenzt"
 NOTIFY_NEVER="niemals"
-BLOCKEDMESSAGELABEL="Sperrnachricht"
-BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde (wenn leergelassen, wird eine Standard-Nachricht angezeigt: 'Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt.')."
-BLOCKDURATIONLABEL="Sperrdauer"
-BLOCKDURATIONDESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
-ENABLENOTIFYREMAININGATTEMPTSLABEL="Übrige Versuche"
-ENABLENOTIFYREMAININGATTEMPTSDESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt"
 BLOCK_UNLIMITED="unbegrenzt"
 BLOCK_5MINUTES="5 Minuten"
 BLOCK_10MINUTES="10 Minuten"
