--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -1,35 +1,37 @@
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>This plugin provides means to avert Brute-Force-Attacks on your Joomla-Installation. For this purpose, the plugin stores information on failed login attempts, so that when reaching a configurable number of such failed login attempts the attacker's IP address can be blocked. Furthermore, you can configure notifications about failed logins and blocked IP addresses, as well as a variable delay for a failed login attempt.</div><br /><div><em>Don't forget to configure and publish the plugin after installation!</em><br />If you have any questions on the plugin, please visit the <a href='https://github.com/codeling/bfstop'>project site on github</a>. Should there be any problems when using the problem, don't hesitate to report them in the <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>In some parts, this plugin was inspired by the following plugins: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Thanks very much for the authors of these plugins!<br />Brute Force Stop is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, published under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-ENABLEBLOCKLABEL="Enable Blocking"
-ENABLEBLOCKDESC="Whether this plugin should block IP addresses. When disabled, no new IP addresses will be added to the list of blocked addresses, and not even IP addresses already on that list will be blocked anymore (the list itself will be preserved, though)."
-EMAILSOURCELABEL="Select Email Source"
-EMAILSOURCEDESC="Choose where the email address to send notifications to should come from"
+BLOCK_ENABLED_LABEL="Enable Blocking"
+BLOCK_ENABLED_DESC="Whether this plugin should block IP addresses. When disabled, no new IP addresses will be added to the list of blocked addresses, and not even IP addresses already on that list will be blocked anymore (the list itself will be preserved, though)."
+EMAIL_SOURCE_LABEL="Email Source"
+EMAIL_SOURCE_DESC="Choose where the email address to send notifications to should come from"
+USERID_LABEL="Select a User"
+USERID_DESC="Select the user you would like to have notifications to be sent."
+EMAIL_ADDRESS_LABEL="Email Address"
+EMAIL_ADDRESS_DESC="Enter the Email Address where you would like to have notifications to be sent."
+NOTIFY_FAILED_NUMBER_LABEL="Failed msgs per day"
+NOTIFY_FAILED_NUMBER_DESC="How often to notify about a failed login during one day"
+NOTIFY_BLOCKED_NUMBER_LABEL="Blocked msgs per day"
+NOTIFY_BLOCKED_NUMBER_DESC="How often to notify about a blocked IP during one day"
+DELAY_DURATION_LABEL="Delay"
+DELAY_DURATION_DESC="Delay (in seconds) on a failed login attempt"
+LOGGING_ENABLED_LABEL="Logging"
+LOGGING_ENABLED_DESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php)"
+BLOCK_NUMBER_LABEL="Block threshold"
+BLOCK_NUMBER_DESC="How often a login can be tried until the IP will be blocked"
+BLOCKED_MESSAGE_LABEL="Blocked message"
+BLOCKED_MESSAGE_DESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts. If left empty, this default message will be shown: 'Your IP address has been blocked because there were too many unsuccessful login attempts in a short time.'"
+BLOCK_DURATION_LABEL="Block Duration"
+BLOCK_DURATION_DESC="Determines how long an IP address is blocked before it is allowed to access the site again"
+NOTIFY_REMAINING_ATTEMPTS_LABEL="Remaining attempts"
+NOTIFY_REMAINING_ATTEMPTS_DESC="Enables or disables notifications about remaining attempts; if enabled, the user will, after each failed login attempt, see a message in the login form about how many login attempts still are available before the IP address will be blocked."
+NOTIFY_BLOCKED_USER_LABEL="User Block Message"
+NOTIFY_BLOCKED_USER_DESC="When turned on, in case of a blocked IP address, a notification will be sent to the user which tried to log in (only of course in case it is an existing username)."
 SELECTEDUSERS="Selected User"
 CUSTOMEMAILADDRESS="Custom Email Address"
-SELECTUSERLABEL="Select a User"
-SELECTUSERSDESC="Select the user you would like to have notifications to be sent."
-ENTEREMAILLABEL="Email Address"
-ENTEREMAILDESC="Enter the Email Address where you would like to have notifications to be sent."
-NOTIFYFAILEDNUMBERLABEL="Failed msgs per day"
-NOTIFYFAILEDNUMBERDESC="How often to notify about a failed login during one day"
-NOTIFYBLOCKEDNUMBERLABEL="Blocked msgs per day"
-NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP during one day"
-DELAYDURATIONLABEL="Delay"
-DELAYDURATIONDESC="Delay (in seconds) on a failed login attempt"
-ENABLELOGGINGLABEL="Logging"
-ENABLELOGGINGDESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php)"
-BLOCKNUMBERLABEL="Block threshold"
-BLOCKNUMBERDESC="How often a login can be tried until the IP will be blocked"
 ENABLED="enabled"
 DISABLED="disabled"
 NOTIFY_UNLIMITED="unlimited"
 NOTIFY_NEVER="never"
-BLOCKEDMESSAGELABEL="Blocked message"
-BLOCKEDMESSAGEDESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts. If left empty, this default message will be shown: 'Your IP address has been blocked because there were too many unsuccessful login attempts in a short time.'"
-BLOCKDURATIONLABEL="Block Duration"
-BLOCKDURATIONDESC="Determines how long an IP address is blocked before it is allowed to access the site again"
-ENABLENOTIFYREMAININGATTEMPTSLABEL="Remaining attempts"
-ENABLENOTIFYREMAININGATTEMPTSDESC="Enables or disables notifications about remaining attempts; if enabled, the user will, after each failed login attempt, see a message in the login form about how many login attempts still are available before the IP address will be blocked."
 BLOCK_UNLIMITED="unlimited"
 BLOCK_5MINUTES="5 Minutes"
 BLOCK_10MINUTES="10 Minutes"
