--- a/language/en-GB/en-GB.plg_system_bfstop.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.ini
@@ -8,3 +8,5 @@ BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %s because there were too many unsu
 BLOCKED_IP_ADDRESS_SUBJECT="Blocked IP Address %s"
 BLOCKED_IP_MESSAGE="Your IP address has been blocked because there were too many unsuccessful login attempts in a short time."
 X_ATTEMPTS_LEFT="You have %d attempt(s) left before your IP address will be blocked"
+BLOCKED_SUBJECT="%s: Failed login attempts"
+BLOCKED_BODY="Hi!\n\nSomebody tried to log in with your username at the website '%s', but has used a wrong password.\nThis has happened so many times that the system has blocked access from the IP Address where these login attempts originated to prevent misuse.\n\nIn case it wasn't you doing these login attempts, please ignore this message. You should be able to login just as usual.\nShould you be responsible for these login attempts, and you now either know the password again or you want to use the "Reset password" functionality, you have the chance to unblock the IP address by clicking on this link:\n%s\n\nBest regards, the automatic website management\n\nNote: This is an automatically generated message."
