Adds contributors section in README

--- a/README
+++ b/README
@@ -2,6 +2,10 @@ Brute Force Stop (bfstop)
 Joomla System Plugin
 by Bernhard Froehler
 
+Contributors:
+Translations to portuguese/brasilian as well as some fixes by solrac comproperty247(at)gmail.com
+
+
 This plugin is intended to hinder brute force login attempts to any Joomla! site.
 
 For detailed instructions on how to download, install and configure it, please browse to
