--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -23,7 +23,7 @@ BLOCKED_MESSAGE_DESC="Die Nachricht, die dem Benutzer im Browserfenster angezeig
 BLOCK_DURATION_LABEL="Sperrdauer"
 BLOCK_DURATION_DESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
 NOTIFY_REMAINING_ATTEMPTS_LABEL="Übrige Versuche"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt"
+NOTIFY_REMAINING_ATTEMPTS_DESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt. Diese Einstellung wird nur dann berücksichtigt, wenn Sperren eingeschaltet ist (wenn es nicht eingeschaltet ist, gibt es ja auch keine 'verbleibenden' Versuche)"
 NOTIFY_BLOCKED_USER_LABEL="Benutzer-Block-Nachricht"
 NOTIFY_BLOCKED_USER_DESC="Wenn eingeschaltet, wird an die in der Datenbank hinterlegte Email-Adresse eine Nachricht hinterlegt, wenn eine IP-Adresse gesperrt wird (sofern der Benutzername, mit dem das Login versucht wurde, ein existierender war)"
 SELECTEDUSERS="Gewählter Benutzer"
