Update fr-FR language with latest version from Flying_Lolo

--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -1,7 +1,8 @@
-; Traduit pour la version 0.9.10 par Flying_Lolo - 26/05/2013
+; Traduit pour la version 0.9.11 par Flying_Lolo - 31/05/2013
 ; Encodage UTF-8 - No BOM
+; Fichier de traduction pour ./plugins/system/
 
-PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
+PLG_SYSTEM_BFSTOP="Systeme Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Ce plug-in fournit des moyens pour prévenir des attaques de votre site Joomla. À cette fin, le plug-in stocke des informations sur les échecs de connexion, de sorte qu'au terme d'un certain nombre (configurable) de tentatives l'adresse IP de l'attaquant peut être bloquée. En outre, vous pouvez configurer la notification des connexions échouées et des adresses bloquées, aussi bien qu'un retard variable pour une tentative de connexion échouée.</div><br /><div><em>N'oubliez pas de configurer et de publier ce plugin après installation!</em><br />Si vous avez des questions, merci de visiter le <a href='https://github.com/codeling/bfstop'>site du projet sur github</a>. En cas de difficultés d'utilisation, n'hésitez pas à les rapporter sur <a href='https://github.com/codeling/bfstop/issues'>ici </a>!</div><br /><div>En partie, ce plugin s'inspire des plugins suivants: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Merci beaucoup aux auteurs de ces plugins!<br />Brute Force Stop est un plugin <a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, publié sous la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
 BLOCK_ENABLED_LABEL="Activation du Blocage"
 BLOCK_ENABLED_DESC="Active le blocage des adresses IP. En cas de désactivation, aucune nouvelle adresse IP ne sera ajoutée à la liste des adresses bloquées. Même les adresses IP déjà listées ne seront pas bloquées, mais la liste elle-même sera conservée."
@@ -22,13 +23,13 @@ LOGGING_ENABLED_DESC="Active le journal d'activité (nécessaire en cas de diffi
 BLOCK_NUMBER_LABEL="Seuil de blocage"
 BLOCK_NUMBER_DESC="Nombre de tentatives autorisées avant blocage"
 BLOCKED_MESSAGE_LABEL="Message de blocage"
-BLOCKED_MESSAGE_DESC="Le message à faire apparaître dans le navigateur de l'utilisateur qui voit son adresse IP bloquée en raison d'utilisation à plusieurs reprises de codes d'accès erronés. Si laissé vide, le message par défaut sera affiché: 'Votre adresse IP a été bloquée en raison d'une utilisation, à plusieurs reprises et dans un temps très court, de codes d'accès erronés.'"
+BLOCKED_MESSAGE_DESC="Le message à faire apparaître dans le navigateur de l'utilisateur qui voit son adresse IP bloquée en raison d'utilisation à plusieurs reprises de codes d'accès erronés. Si laissé vide, le message par défaut sera affiché: 'Votre adresse IP a été bloquée en raison d'une utilisation, à plusieurs reprises et durant un laps de temps très court, de codes d'accès erronés.'"
 BLOCK_DURATION_LABEL="Durée de blocage"
 BLOCK_DURATION_DESC="Configuration de la durée de blocage de l'adresse IP avant réouverture de l'accès"
 NOTIFY_REMAINING_ATTEMPTS_LABEL="Affichage du nombre de tentatives restantes"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Active ou désactive la notification utilisateur du nombre de tentatives autorisées avant blocage; en cas d'activation, l'utilisateur recevra, après chaque tentative de connexion, un message dans la fenêtre de connexion l'informant du nombre de tentatives restantes avant blocage. Cette option n'est naturellement pas pertinente si l'option de blocage n'est pas activée."
 NOTIFY_BLOCKED_USER_LABEL="Message utilisateur en cas de blocage"
-NOTIFY_BLOCKED_USER_DESC="Lorsque cette option est activée, en cas de blocage d'une adresse IP, un message sera transmis à l'utilisateur dont l'identifiant utilisateur aura été utilisé lors des tentatives de connexion."
+NOTIFY_BLOCKED_USER_DESC="Lorsque cette option est activée, en cas de blocage d'une adresse IP, un message sera transmis, le cas échéant, à l'utilisateur dont l'identifiant utilisateur aura été utilisé lors des tentatives de connexion."
 SELECTEDUSERS="Utilisateur sélectionné"
 CUSTOMEMAILADDRESS="Courriel personnalisé"
 ENABLED="activé"
