--- a/language/fr-FR/fr-FR.plg_system_bfstop.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.ini
@@ -1,5 +1,6 @@
-; Traduit pour la version 0.9.10 par Flying_Lolo - 26/05/2013
+; Traduit pour la version 0.9.11 par Flying_Lolo - 31/05/2013
 ; Encodage UTF-8 - No BOM
+; Fichier de traduction pour ./plugins/system/
 
 FAILED_LOGIN_ATTEMPT="Tentative de connexion %s"
 USERNAME="Identifiant d'utilisateur"
@@ -7,7 +8,7 @@ IPADDRESS="Addresse IP"
 ERROR="Erreur"
 DATETIME="Date et heure"
 ORIGIN="Origine"
-BLOCKED_IP_ADDRESS_BODY="Addresse IP %s bloquée pour cause de multiples tentatives de connexion sur une courte période. Les tentatives sont les suivantes:\n\n%s"
+BLOCKED_IP_ADDRESS_BODY="Addresse IP %s bloquée pour cause de multiples tentatives de connexion sur un court laps de temps. Les tentatives sont les suivantes:\n\n%s"
 BLOCKED_IP_ADDRESS_SUBJECT="Addresse IP bloquée %s"
 BLOCKED_IP_MESSAGE="En raison de multiples tentatives de connexion, rapprochées dans le temps, votre adresse IP a été bloquée."
 X_ATTEMPTS_LEFT="Il vous reste %d tentative(s) avant que votre adresse IP ne soit bloquée."
