--- a/language/es-ES/es-ES.plg_system_bfstop.ini
+++ b/language/es-ES/es-ES.plg_system_bfstop.ini
@@ -1,11 +1,11 @@
-FAILED_LOGIN_ATTEMPT="Tentativa de entrada al sistema fracasada en %s"
+FAILED_LOGIN_ATTEMPT="%s: Tentativa de entrada al sistema fracasada en %s"
 USERNAME="Usuario"
 IPADDRESS="IP-Dirección"
 ERROR="Error"
 DATETIME="Fecha y tiempo"
 ORIGIN="Origen"
-BLOCKED_IP_ADDRESS_BODY="Bloqueada IP %s por demasiadas tentativas de entrada fracasadas al sistema. Estas son las tentativas:\n\n%s"
-BLOCKED_IP_ADDRESS_SUBJECT="Dirección IP bloqueada %s"
+BLOCKED_IP_ADDRESS_BODY="Bloqueada IP %s por demasiadas tentativas de entrada fracasadas al sistema (%s). Estas son las tentativas:\n\n%s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: Dirección IP bloqueada %s"
 BLOCKED_IP_MESSAGE="Su dirección IP ha sido bloqueada por demasiadas tentativas fracasadas de entrada al sistema."
 X_ATTEMPTS_LEFT="Puede intentar (s) %d  antes de que su dirección IP sea bloqueada"
 BLOCKED_SUBJECT="%s: Tentativas fracasadas de entrada al sistema"
