--- a/language/fr-FR/fr-FR.plg_system_bfstop.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.ini
@@ -2,14 +2,14 @@
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/
 
-FAILED_LOGIN_ATTEMPT="Tentative de connexion %s"
+FAILED_LOGIN_ATTEMPT="%s: Tentative de connexion %s"
 USERNAME="Identifiant d'utilisateur"
 IPADDRESS="Addresse IP"
 ERROR="Erreur"
 DATETIME="Date et heure"
 ORIGIN="Origine"
-BLOCKED_IP_ADDRESS_BODY="Addresse IP %s bloquée pour cause de multiples tentatives de connexion sur un court laps de temps. Les tentatives sont les suivantes:\n\n%s"
-BLOCKED_IP_ADDRESS_SUBJECT="Addresse IP bloquée %s"
+BLOCKED_IP_ADDRESS_BODY="%2$s: Addresse IP %1$s bloquée pour cause de multiples tentatives de connexion sur un court laps de temps. Les tentatives sont les suivantes:\n\n%3$s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: Addresse IP bloquée %s"
 BLOCKED_IP_MESSAGE="En raison de multiples tentatives de connexion, rapprochées dans le temps, votre adresse IP a été bloquée."
 X_ATTEMPTS_LEFT="Il vous reste %d tentative(s) avant que votre adresse IP ne soit bloquée."
 BLOCKED_SUBJECT="%s: Enregistrement de multiples tentatives de connexion."
