--- a/language/nl-NL/nl-NL.plg_system_bfstop.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.ini
@@ -1,11 +1,11 @@
-FAILED_LOGIN_ATTEMPT="Mislukte login pogingen op %s"
+FAILED_LOGIN_ATTEMPT="%s: Mislukte login pogingen op %s"
 USERNAME="Gebruikersnaam"
 IPADDRESS="IP-Addres"
 ERROR="Fout"
 DATETIME="Datum en tijd"
 ORIGIN="Oorsprong"
-BLOCKED_IP_ADDRESS_BODY="IP Address %s geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest. Dit zijn de opgingen:\n\n%s"
-BLOCKED_IP_ADDRESS_SUBJECT="Geblokkeerd IP Addres %s"
+BLOCKED_IP_ADDRESS_BODY="%2$s: IP Address %1$s geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest. Dit zijn de opgingen:\n\n%3$s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: Geblokkeerd IP Addres %s"
 BLOCKED_IP_MESSAGE="Uw IP-adres is geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest."
 X_ATTEMPTS_LEFT="Je hebt %d poging(en) over voordat je IP addres word geblokkeerd"
 BLOCKED_SUBJECT="%s: Mislukte login pogingen"
