--- a/language/pt-BR/pt-BR.plg_system_bfstop.ini
+++ b/language/pt-BR/pt-BR.plg_system_bfstop.ini
@@ -2,14 +2,14 @@
 ; www.com-property.site11.com
 ; Saved as UTF-8 - No BOM
 
-FAILED_LOGIN_ATTEMPT="Falha na tentativa de login em %s"
+FAILED_LOGIN_ATTEMPT="%s: Falha na tentativa de login em %s"
 USERNAME="Nome"
 IPADDRESS="Endereço IP"
 ERROR="Erro"
 DATETIME="Data e hora"
 ORIGEM="Origem"
-BLOCKED_IP_ADDRESS_BODY="Endereço IP bloqueado %s devido às várias tentativas falhadas para iniciar a sessão em tão pouco tempo. Número de tentativas:\n\n%s"
-BLOCKED_IP_ADDRESS_SUBJECT="Bloqueado o endereço IP %s"
+BLOCKED_IP_ADDRESS_BODY="%2$s: Endereço IP bloqueado %1$s devido às várias tentativas falhadas para iniciar a sessão em tão pouco tempo. Número de tentativas:\n\n%3$s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: Bloqueado o endereço IP %s"
 BLOCKED_IP_MESSAGE="Seu endereço de IP %s foi bloqueado porque houve muitas tentativas de login sem sucesso em um curto espaço de tempo."
 X_ATTEMPTS_LEFT="Tem mais %d tentativas(s) antes do seu endereço IP ser bloqueado"
 BLOCKED_SUBJECT="% s: Falha tentativas de login"
