--- a/language/de-DE/de-DE.plg_system_bfstop.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.ini
@@ -1,11 +1,11 @@
-FAILED_LOGIN_ATTEMPT="Fehlgeschlagener Login-Versuch auf %s"
+FAILED_LOGIN_ATTEMPT="%s: Fehlgeschlagener Login-Versuch auf %s"
 USERNAME="Benutzername"
 IPADDRESS="IP-Adresse"
 ERROR="Fehler"
 DATETIME="Zeitpunkt"
 ORIGIN="Quelle"
-BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt! Die Login-Versuche:\n\n%s"
-BLOCKED_IP_ADDRESS_SUBJECT="IP-Adresse %s gesperrt"
+BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %1$s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche auf %2$s gesperrt! Die Login-Versuche:\n\n%3$s"
+BLOCKED_IP_ADDRESS_SUBJECT="%s: IP-Adresse %s gesperrt"
 BLOCKED_IP_MESSAGE="Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt."
 X_ATTEMPTS_LEFT="Du hast noch %d Versuch(e) bevor deine IP-Adresse blockiert wird!"
 BLOCKED_SUBJECT="%s: Fehlgeschlagene Login-Versuche"
