Various fixes to make permanent blocking after configurable amount of blocks work, de-DE translation

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -42,3 +42,6 @@ BLOCK_2HOURS="2 Stunden"
 BLOCK_4HOURS="4 Stunden"
 BLOCK_8HOURS="8 Stunden"
 BLOCK_24HOURS="1 Tag"
+MAX_BLOCKS_BEFORE_LABEL="Permanent nach"
+MAX_BLOCKS_BEFORE_DESC="Bestimmt nach wie vielen Sperren eine permanente Sperre einer IP-Adresse eingerichtet wird. Zur Bestimmung der Anzahl vorheriger Sperren werden auch solche wiederaufgehobenen Sperren hinzugezählt, die der Benutzer selbst wiederaufgehoben hat; nur per Backend aufgehobene Sperren werden ignoriert"
+MAX_BLOCK_NEVER="Niemals"
