Optionally enable plugin only for backend or frontend (fixes #27)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -45,3 +45,8 @@ BLOCK_24HOURS="1 Tag"
 MAX_BLOCKS_BEFORE_LABEL="Permanent nach"
 MAX_BLOCKS_BEFORE_DESC="Bestimmt nach wie vielen Sperren eine permanente Sperre einer IP-Adresse eingerichtet wird. Zur Bestimmung der Anzahl vorheriger Sperren werden auch solche wiederaufgehobenen Sperren hinzugezählt, die der Benutzer selbst wiederaufgehoben hat; nur per Backend aufgehobene Sperren werden ignoriert"
 MAX_BLOCK_NEVER="Niemals"
+ENABLED_FOR_ORIGIN_LABEL="Aktiv für"
+ENABLED_FOR_ORIGIN_DESC="Bestimmt für welche Teile des Joomla!-Systems das Plugin aktiv ist. Wenn nur für entweder Frontend oder Backend aktiviert, dann wird vom anderen Teil keinerlei Aktion für irgendeine Funktionalität berücksichtigt (wenn zum Beispiel hier 'Nur Backend' eingestellt ist, dann wird nicht nur kein Log über fehlgeschlagene Logins im Frontend geführt, sondern auch erfolgreiche Logins im Frontend werden nicht zu einer Zurücksetzung des Zählers der fehlgeschlagenen Logins für das Backend verwendet). Wichtig: Eine Sperre betrifft immer die gesamte Seite, egal was hier eingestellt ist."
+ENABLED_FOR_FRONTEND="Nur Frontend"
+ENABLED_FOR_BACKEND="Nur Backend"
+ENABLED_FOR_BOTH="Frontend und Backend"
