--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -45,3 +45,8 @@ BLOCK_24HOURS="1 Day"
 MAX_BLOCKS_BEFORE_LABEL="Permanent after"
 MAX_BLOCKS_BEFORE_DESC="Determines after how many blocked attempts a permanent block will be set up. Blocks which were removed (i.e. unblocked) by token do also count; only those done via the backend will be ignored."
 MAX_BLOCK_NEVER="Never"
+ENABLED_FOR_ORIGIN_LABEL="Active for"
+ENABLED_FOR_ORIGIN_DESC="Determines for which parts of the Joomla! system the plugin should be active. If set to only either frontend or backend, the respective other part will not be considered for any functionality (e.g. if configured only for backend, then failed login attempts in frontend will not be logged; but also successful logins in frontend won't reset the failed login counter). Please note that a block always affects the whole site, no matter what is entered here!"
+ENABLED_FOR_FRONTEND="Only Frontend"
+ENABLED_FOR_BACKEND="Only Backend"
+ENABLED_FOR_BOTH="Frontend and Backend"
