--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,17 @@
+0.9.11beta1 (2013-06-07)
+  - Adds ca-ES translations (thanks to nouespai)
+  - Adds fr-FR translations (thanks to Flying_Lolo)
+  - Adds nl-NL translations (thanks to Agrusoft)
+  - Adds es-ES translations (thanks to Aimagen)
+  - Optionally enable plugin only for backend or frontend
+  - When desired, after a configurable number of blocks the block duration can be set to permanent on the next block
+  - Update via automatic Joomla! update mechanism
+  - Warning if there is a user with username 'admin'
+  - View failed login attempts in backend
+  - Allow viewing and editing block duration for each IP banned IP address
+  - Ability to test the notification
+  - improves Joomla! 3.x table layout
+
 0.9.10.2 (2013-05-28)
   - fix for issue #12 "bfstop doesn't block", where a block duration of
     unlimited would always lead to no IP being blocked
