Update ca-ES language for v0.9.11

--- a/language/ca-ES/ca-ES.plg_system_bfstop.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.ini
@@ -1,11 +1,14 @@
 ;traducció feta per nouespai 30-04-2013
-FAILED_LOGIN_ATTEMPT="%s: Failed login attempt at %s"
+
+FAILED_LOGIN_ATTEMPT="Intent d'identificació erroni a %s"
 USERNAME="Nom d'usuari"
 IPADDRESS="Adreça IP"
 ERROR="Error"
 DATETIME="Dia i hora"
 ORIGIN="Origen"
-BLOCKED_IP_ADDRESS_BODY="%2$s: El bloqueig de l'adreçça IP %1$s ha estat perquè hi havia massa intents fallits d'ingressar en poc temps. Aquests són els intents de:\n\n%3$s"
-BLOCKED_IP_ADDRESS_SUBJECT="%s: Adreça IP bloquejada %s"
+BLOCKED_IP_ADDRESS_BODY="El bloqueig de l'adreçça IP %s ha estat perquè hi havia massa intents fallits d'ingressar en poc temps. Aquests són els intents de:\n\n%s"
+BLOCKED_IP_ADDRESS_SUBJECT="Adreça IP bloquejada %s"
 BLOCKED_IP_MESSAGE="La teva adreça IP ha estat bloquejada perquè hi havia massa intents fallits d'ingressar en molt poc temps."
-X_ATTEMPTS_LEFT="Li resten %d intent(s) d'ingressar abans que la seva adreça IP sigui bloquejada. Si no recordes el nom o contrasenya, pots demanar al sistema que te la torni a enviar"
+X_ATTEMPTS_LEFT="Et resten %d intent(s) d'ingressar abans que la teva adreça IP sigui bloquejada. Si no recordes el nom o contrasenya, pots demanar al sistema que te la torni a enviar"
+BLOCKED_SUBJECT="%s: Intents fallits d'inici de sessió"
+BLOCKED_BODY="Hola,\n\nAlgú ha intentat iniciar sessió amb el teu nom d'usuari al lloc web '%s', però ha utilitzat una contrasenya incorrecta.\nAixò ha passat tantes vegades que s'ha bloquejat l'accés des de l'adreça Ip des d'on aquests intents de connexió es van originar per evitar abusos.\n\nEn cas que no siguis tu qui hagis fet aquests intents de connexió, si us plau, ignora aquest missatge. Hauríes de ser capaç d'iniciar sessió com de costum. \nHauries de ser responsable d'aquests intents de connexió, i o bé saber de nou la contrasenya (o utilitzar la funció de "Restablir contrasenya"). Ara tens l'oportunitat de desbloquejar l'adreça Ip, clicant aquest enllaç:\n%s\n\nAfectuosament, el gestor automàtica del lloc web!\n\nNota: Aquest és un missatge generat automàticament."
